# daft-bot

./: .2bhk.env.example  .3bhk.env.example  .4bhk.env.example  .env.example  .gitignore  README.md  cache.py  daft_bot.py  daft_bot_utils.py  email_notification.py  images.txt  installation.sh  listings.txt  pyproject.toml  requirements.txt  script.sh  selenium_bot.py
daft_bot/: cache.py  config.py  email_notification.py  logger.py  main.py  selenium_bot.py
